--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,10 @@
-name: Update pages
-
 on:
   push:
     branches:
       - main
 
 jobs:
-  release:
+  publish-helm:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -18,3 +16,15 @@ jobs:
         uses: helm/chart-releaser-action@v1.3.0
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+
+  icons:
+    runs-on: ubuntu-latest
+    needs: publish-helm
+    steps:
+      - uses: actions/setup-node@v2.1.3
+        with:
+          node-version: '15'
+      - run: git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${{github.repository}}.git
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - run: npx -y -p gh-pages@3.0.0 gh-pages -d ./icons --dest icons --add -u "github-actions-bot <actions@github.com>" 
