--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,8 +7,7 @@ jobs:
   publish-helm:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v1
+      - uses: actions/checkout@v1
       - run: |
           git config user.name "actions"
           git config user.email "actions@github.com"
@@ -21,6 +20,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: publish-helm
     steps:
+      - uses: actions/checkout@v1
       - uses: actions/setup-node@v2.1.3
         with:
           node-version: '15'
