--- a/charts/flarum/templates/pvc.yaml
+++ b/charts/flarum/templates/pvc.yaml
@@ -1,8 +1,8 @@
-{{- if and .Values.persistence.enabled (not .Values.persistence.existingClaim) }}
+{{- if and .Values.persistence.enabled (not .Values.primary.persistence.existingClaim) }}
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: {{ .Values.mariadb.persistence.existingClaim }}
+  name: {{ .Values.mariadb.primary.persistence.existingClaim }}
   labels:
     {{- include "library-chart.labels" . | nindent 4 }}
 spec:
