Translate some descriptions in french

--- a/charts/elastic/Chart.yaml
+++ b/charts/elastic/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
 name: elastic
-description: Elasticsearch is a search engine based on the Lucene library. It provides a distributed, multitenant-capable full-text search engine with an HTTP web interface and schema-free JSON documents
+description: Elasticsearch est un logiciel utilisant Lucene pour l'indexation et la recherche de données. Il fournit un moteur de recherche distribué et multi-entité à travers une interface REST.
 icon: https://minio.lab.sspcloud.fr/projet-onyxia/assets/servicesImg/elk.png
-keyworks:
+keywords:
   - Search
   - Lucene
   - Visualization
@@ -23,7 +23,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 2.0.2
+version: 2.0.3
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
