--- a/charts/flarum/Chart.yaml
+++ b/charts/flarum/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 name: flarum
 description: Un simple logiciel de forum pour construire des communautés génial.
-icon: https://garronej.github.io/helm-charts-sill/icons/flarum.png
+icon: https://etalab.github.io/helm-charts-sill/icons/flarum.png
 keywords:
   - Forum
 home: https://flarum.org
@@ -21,7 +21,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.0.12
+version: 0.0.13
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
