Update charts to make them work with the new Onyxia

--- a/charts/chromium/templates/deployment.yaml
+++ b/charts/chromium/templates/deployment.yaml
@@ -60,7 +60,7 @@ spec:
               value: {{ .Values.security.password }}
             {{- if .Values.init.personalInit }}
             - name: PERSONAL_INIT_SCRIPT
-              values: {{ .Values.init.personalInit }}
+              value: {{ .Values.init.personalInit }}
             {{- end }}
             {{- if .Values.init.personalInitArgs }}
             - name: PERSONAL_INIT_ARGS
@@ -103,6 +103,7 @@ spec:
       initContainers:
         - name: standard-init
           image: "busybox"
+          imagePullPolicy: "IfNotPresent"
           command: ["/bin/sh","-c"]
           args: ["wget -O /data/{{ .Values.init.filename}} {{ .Values.init.standardInit}} && chmod +x /data/{{ .Values.init.filename}}"]
           volumeMounts:
