--- a/charts/chromium/templates/service.yaml
+++ b/charts/chromium/templates/service.yaml
@@ -11,5 +11,11 @@ spec:
       targetPort: http
       protocol: TCP
       name: http
+    {{ if .Values.networking.user.enabled }}
+    - port: {{ .Values.networking.user.port }}
+      targetPort: {{ .Values.networking.user.port }}
+      protocol: TCP
+      name: user
+    {{- end }}
   selector:
     {{- include "library-chart.selectorLabels" . | nindent 4 }}
