--- a/charts/elastic/templates/discovery-secret.yaml
+++ b/charts/elastic/templates/discovery-secret.yaml
@@ -11,4 +11,5 @@ type: Opaque
 data:
   elastic-service: {{ "elasticsearch-master" | b64enc | quote }}
   elastic-port: {{ .Values.elasticsearch.httpPort | toString | default ".Values.elasticsearch.httpPort"  | b64enc | quote }}
+  elastic-name: {{ printf "%s" $fullname  | b64enc | quote }}
 {{- end -}}
