--- a/charts/elastic/values.yaml
+++ b/charts/elastic/values.yaml
@@ -30,3 +30,14 @@ ingress:
   #  - secretName: chart-example-tls
   #    hosts:
   #      - chart-example.local
+security:
+  allowlist:
+    enabled: true
+    ip: "0.0.0.0/0" 
+  networkPolicy: 
+    enabled: true
+    from: 
+    - ipBlock:
+        cidr: 10.233.103.0/32
+    - ipBlock:
+        cidr: 10.233.111.0/32 
