--- a/charts/mongodb/templates/discovery-secret.yaml
+++ b/charts/mongodb/templates/discovery-secret.yaml
@@ -10,6 +10,7 @@ metadata:
 type: Opaque
 data:
   mongodb-service: {{ (include "mongoList" .)  | b64enc | quote }}
+  mongodb-name: {{ printf "%s" $fullname | b64enc | quote }}
   {{- if .Values.mongodb.auth.password  }}
   mongodb-password: {{ .Values.mongodb.auth.password | b64enc | quote }}
   {{- end }}
