--- a/charts/nocodb/Chart.yaml
+++ b/charts/nocodb/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: nocodb
-description: NoCoDB est une plateforme NoCode open source qui permet de transformer n'importe quelle base de données en un tableur intelligent. 
+description: NocoDB is an open source NoCode platform that turns any database into a smart spreadsheet
 icon: https://minio.lab.sspcloud.fr/projet-onyxia/assets/servicesImg/nocodb.png
 keywords:
   - Tool
@@ -22,7 +22,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.0.5
+version: 0.0.6
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
