--- a/charts/nocodb/values.yaml
+++ b/charts/nocodb/values.yaml
@@ -9,7 +9,7 @@ service:
 
 security:
   networkPolicy: 
-    enable: false
+    enabled: false
     from: 
     - ipBlock:
         cidr: 10.233.103.0/32
