--- a/charts/postgresql/values.yaml
+++ b/charts/postgresql/values.yaml
@@ -1,10 +1,26 @@
 postgresql:
   image:
-    tag: "12"
+    tag: "14"
+    pullPolicy: IfNotPresent
+  global:
+    postgresql:
+      service: 
+        ports:
+          postgresql: 5432
+  auth:
+    postgresPassword: ""
+    username: ""
+    password: ""
+    database: ""
+  extensions:
+    postgis: false
+  primary:
+    initdb:
+      scriptsConfigMap: '{{ include "library-chart.fullname" . }}'
+  
+discoverable:
+  allow: true
 
-global:
-  postgresql:
-    servicePort: 5432
-    
-    discoverable:
-      allow: true
+security:
+  networkPolicy: 
+    enabled: true
