--- a/charts/elastic/Chart.yaml
+++ b/charts/elastic/Chart.yaml
@@ -7,7 +7,7 @@ keywords:
   - Lucene
   - Visualization
 home: https://www.elastic.co/
-sources: 
+sources:
   - https://github.com/InseeFrLab/helm-charts-datascience/tree/master/charts/elastic
   - https://github.com/elastic/helm-charts/tree/master/elasticsearch
 # A chart can be either an 'application' or a 'library' chart.
@@ -23,24 +23,19 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 2.0.3
+version: 2.0.4
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
-appVersion: 1
+appVersion: "1"
 dependencies:
   - name: elasticsearch
-    version: 7.13.4
-    repository:  https://helm.elastic.co
-    enabled: true
+    version: 7.17.3
+    repository: https://helm.elastic.co
   - name: kibana
-    version: 7.13.4
-    repository:  https://helm.elastic.co
-    enabled: true
+    version: 7.17.3
+    repository: https://helm.elastic.co
   - name: library-chart
     version: 2.0.20
     repository: https://inseefrlab.github.io/helm-charts-datascience
-
-
-
