--- a/charts/elastic/templates/networkpolicy.yaml
+++ b/charts/elastic/templates/networkpolicy.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   podSelector:
     matchLabels:
-      {{- include "library-chart.selectorLabels" . | nindent 6 }}
+      release: {{ .Release.Name | quote }}
   ingress:
   - from:
     - podSelector: {}
