--- a/charts/jupyter/templates/statefulset.yaml
+++ b/charts/jupyter/templates/statefulset.yaml
@@ -159,6 +159,7 @@ spec:
       initContainers:
         - name: standard-init
           image: "busybox"
+          imagePullPolicy: "IfNotPresent"
           command: ["/bin/sh","-c"]
           args: ["wget -O /data/{{ .Values.init.filename}} {{ .Values.init.standardInit}} && chmod +x /data/{{ .Values.init.filename}}"]
           volumeMounts:
