--- a/charts/jupyter/values.yaml
+++ b/charts/jupyter/values.yaml
@@ -3,29 +3,35 @@
 service:
   user: jovyan
   image:
-    version: "inseefrlab/jupyter-datascience:py3.9.7-spark3.2.0"
+    version: "inseefrlab/jupyter-datascience:py3.9.12-spark3.3.0-v0.0.1"
     pullPolicy: IfNotPresent
     custom:
       enabled: false
-      version: "inseefrlab/jupyter-datascience:py3.9.7-spark3.2.0"
+      version: "inseefrlab/jupyter-datascience:py3.9.12-spark3.3.0-v0.0.1"
 
 spark:
   sparkui: false
   configMapName: ""
   default: true
+  disabledCertChecking: false
   config:
     spark.master: k8s://https://kubernetes.default.svc:443
     spark.kubernetes.authenticate.driver.serviceAccountName: '{{ include "library-chart.fullname" . }}'                
     spark.kubernetes.driver.pod.name: '{{ include "library-chart.fullname" . }}-0'
     spark.kubernetes.namespace: '{{ .Release.Namespace }}'
+    spark.kubernetes.container.image: '{{ ternary .Values.service.image.custom.version .Values.service.image.version .Values.service.image.custom.enabled }}'
+    spark.driver.extraJavaOptions: '-Dcom.amazonaws.sdk.disableCertChecking={{ .Values.spark.disabledCertChecking }}'
+    spark.executor.extraJavaOptions: '-Dcom.amazonaws.sdk.disableCertChecking={{ .Values.spark.disabledCertChecking }}'
+  userConfig:
     spark.dynamicAllocation.enabled: "true"
     spark.dynamicAllocation.initialExecutors: "1"
     spark.dynamicAllocation.minExecutors: "1"
     spark.dynamicAllocation.maxExecutors: "10"
+    spark.executor.memory: "2g"
+    spark.driver.memory: "2g"
     spark.dynamicAllocation.executorAllocationRatio: "1"
     spark.dynamicAllocation.shuffleTracking.enabled: "true"
-    spark.kubernetes.container.image: '{{ ternary .Values.service.image.custom.version .Values.service.image.version .Values.service.image.custom.enabled }}'
-
+    spark.hadoop.fs.s3a.bucket.all.committer.magic.enabled: "true"
 
 security:
   password: "changeme"
@@ -87,6 +93,7 @@ git:
   cache: ""
   token: ""
   repository: ""
+  branch: ""
   
 #active ou non la recherche d'un hiveMetastore dans le namespace
 # see configmap-hive.yaml et helpers template
@@ -141,6 +148,9 @@ securityContext: {}
 networking:
   type: ClusterIP
   clusterIP: None
+  user: 
+    enabled: false
+    port: 5000
   jupyter:
     port: 8888
   sparkui:
@@ -153,6 +163,7 @@ ingress:
     kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hostname: chart-example.local
+  userHostname: chart-example-user.local
   #  - secretName: chart-example-tls
   #    hosts:
   #      - chart-example.local
