--- a/charts/mlflow/Chart.yaml
+++ b/charts/mlflow/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: mlflow
 description: MLflow is an open source platform to manage the ML lifecycle, including experimentation, reproducibility, deployment, and a central model registry.
 icon: https://minio.lab.sspcloud.fr/projet-onyxia/assets/servicesImg/mlflow.png
-keyworks:
+keywords:
   - ML
 home: https://mlflow.org
 sources:
@@ -21,7 +21,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 3.0.7
+version: 3.0.8
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
@@ -29,7 +29,7 @@ version: 3.0.7
 appVersion: 1
 dependencies:
   - name: postgresql
-    version: 10.3.14
+    version: 11.6.15
     repository:  https://charts.bitnami.com/bitnami
     enabled: true
   - name: library-chart
