--- a/charts/mlflow/values.yaml
+++ b/charts/mlflow/values.yaml
@@ -3,9 +3,10 @@
 # Declare variables to be passed into your templates.
 global:
   postgresql:
-    postgresqlDatabase: "mlflow"
-    postgresqlUser: "admin"
-    postgresqlPassword: "changeme"
+    auth:
+      username: "admin"
+      password: "changeme"
+      database: "mlflow"
   
 replicaCount: 1
 
@@ -37,7 +38,7 @@ liveness:
 
 security:
   networkPolicy: 
-    enable: false
+    enabled: false
     from: 
     - ipBlock:
         cidr: 10.233.103.0/32
