--- a/charts/postgresql/Chart.yaml
+++ b/charts/postgresql/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: postgresql
 description: An object-relational database management system, a database server
 icon: https://minio.lab.sspcloud.fr/projet-onyxia/assets/servicesImg/post.png
-keyworks:
+keywords:
   - SQL
   - Database
 home: https://www.postgresql.org/
@@ -23,7 +23,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 2.1.7
+version: 2.1.8
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
@@ -31,9 +31,13 @@ version: 2.1.7
 appVersion: 1
 dependencies:
   - name: postgresql
-    version: 10.15.1
+    version: 11.0.2
     repository:  https://charts.bitnami.com/bitnami
     enabled: true
+  - name: library-chart
+    version: 2.0.20
+    repository: https://inseefrlab.github.io/helm-charts-datascience
+
 
 
 
