--- a/charts/rstudio/Chart.yaml
+++ b/charts/rstudio/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: rstudio
 description: R Studio is the reference environment / IDE for programming with R, a programming language used for data processing and statistical analysis. You can use it for spark.
 icon: https://minio.lab.sspcloud.fr/projet-onyxia/assets/servicesImg/rstudio.png
-keyworks:
+keywords:
   - R
   - IDE
 home: https://www.rstudio.com/
@@ -23,9 +23,9 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 6.1.7
+version: 6.1.8
 
 dependencies:
   - name: library-chart
-    version: 2.0.20
+    version: 2.1.0
     repository: https://inseefrlab.github.io/helm-charts-datascience
