--- a/charts/vscode/templates/deployment.yaml
+++ b/charts/vscode/templates/deployment.yaml
@@ -50,7 +50,7 @@ spec:
           image: "{{ .Values.service.image.version }}"
           {{- end }} 
           command: ["/bin/sh","-c"]
-          args: ["/data/{{ .Values.init.filename}} fixuid -q /usr/bin/code-server --host 0.0.0.0 /home/coder/work"]
+          args: ["/data/{{ .Values.init.filename}} /usr/bin/code-server --host 0.0.0.0 /home/coder/work"]
           imagePullPolicy: {{ .Values.service.image.pullPolicy }}
           env:
             - name: SHELL
@@ -106,6 +106,7 @@ spec:
       initContainers:
         - name: standard-init
           image: "busybox"
+          imagePullPolicy: "IfNotPresent"
           command: ["/bin/sh","-c"]
           args: ["wget -O /data/{{ .Values.init.filename}} {{ .Values.init.standardInit}} && chmod +x /data/{{ .Values.init.filename}}"]
           volumeMounts:
