--- a/charts/vscode/templates/networkpolicy.yaml
+++ b/charts/vscode/templates/networkpolicy.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.security.networkPolicy.enable -}}
+{{- if .Values.security.networkPolicy.enabled -}}
 kind: NetworkPolicy
 apiVersion: networking.k8s.io/v1
 metadata:
